# ros2_practise

./: README.md  nodes_model.xml
.marscode/: deviceInfo.json
src/actions_cpp/: CMakeLists.txt  package.xml
src/actions_cpp/src/: count_until_client.cpp  count_until_server.cpp  move_robot_client.cpp  move_robot_server.cpp
src/actions_py/: package.xml  setup.py
src/actions_py/actions_py/: count_until_client.py  count_until_server.py
src/actions_py/launch/: setup_launch.py
src/behavior_tree_cpp/: CMakeLists.txt  package.xml  tutorial.md
src/behavior_tree_cpp/include/behavior_tree_cpp/: blackboard_nodes.h  dummy_nodes.h
src/behavior_tree_cpp/src/: basic_nodes.cpp  blackboard.cpp  blackboard_nodes.cpp  dummy_nodes.cpp  factory.cpp  groot_tutorial.cpp  my_blackboard.cpp  my_first_bt.cpp  my_ide_tree.cpp  template_blackboard.cpp  test.cpp
src/behavior_tree_cpp/trees/: basic_nodes.xml  blackboard.xml  groot_tutorial.xml  my_IDE_tree.xml  my_blackboard_tree.xml  my_first_tree.xml  nodes_model.xml  template_blackboard.xml
src/bumperbot_description/: package.xml
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  my_robot.urdf
src/components_cpp/: CMakeLists.txt  package.xml
src/components_cpp/include/components_cpp/: node1.hpp  node2.hpp  runtime_component.hpp
src/components_cpp/src/: manual_composition.cpp  node1.cpp  node2.cpp  runtime_component.cpp
src/executers_cpp/: CMakeLists.txt  package.xml
src/executers_cpp/src/: multi_threaded_executor.cpp  single_threaded_executor.cpp
src/launch_py/: CMakeLists.txt  package.xml
src/launch_py/config/: turtle.yaml
src/launch_py/launch/: args_launch.py  cmd_launch.py  node_launch.py
src/learning_navigation/: CMakeLists.txt  package.xml
src/learning_tf2_cpp/: CMakeLists.txt  package.xml
src/learning_tf2_cpp/launch/: bringup.launch.xml  dynamic_frame_tf2_broadcaster.launch.xml  fixed_frame_tf2_broadcaster.launch.xml  my_tf_launch.xml  turtle_tf2_sensor_message.launch.xml  turtle_tf2_sensor_message_launch.xml
src/learning_tf2_cpp/src/: fixed_frame_tf2_broadcaster.cpp  my_dynamic_tf2_broadcaster.cpp  my_static_tf2_broadcaster.cpp  my_tf2_listener.cpp  static_turtle_tf2_broadcaster.cpp  turtle_tf2_broadcaster.cpp  turtle_tf2_fack_message_broadcaster.cpp  turtle_tf2_listener.cpp  turtle_tf2_message_filter.cpp
src/lifecycle_cpp/: CMakeLists.txt  package.xml
src/lifecycle_py/: package.xml  setup.py
src/lifecycle_py/lifecycle_py/: __init__.py  lifecycle_node_manager.py  number_publish.py
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/include/my_cpp_pkg/: template_C++_node.hpp
src/my_cpp_pkg/src/: compute_rectangle_area_client.cpp  compute_rectangle_area_server.cpp  hardware_status_publisher.cpp  hardware_status_subscriber.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp  template_C++_node.cpp  template_cpp_node.cpp
src/my_plugin/: study.md
src/my_plugin/load_planner/: CMakeLists.txt  package.xml
src/my_plugin/load_planner/src/: load_planner.cpp
src/my_plugin/navigation_planner/: CMakeLists.txt  package.xml
src/my_plugin/navigation_planner/include/navigation_planner/: base_planner.hpp
src/my_plugin/planner_sample_1/: CMakeLists.txt  package.xml  plugin.xml
src/my_plugin/planner_sample_1/include/planner_sample_1/: planner_sample_1.hpp  visibility_control.h
src/my_plugin/planner_sample_1/src/: planner_sample_1.cpp
src/my_plugin/planner_sample_2/: CMakeLists.txt  package.xml  plugin.xml
src/my_plugin/planner_sample_2/include/planner_sample_2/: planner_sample_2.hpp  visibility_control.h
src/my_plugin/planner_sample_2/src/: planner_sample_2.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py  robot_news_station.py  smartphone.py  template_python_node.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: params.yaml
src/my_robot_bringup/launch/: components.launch.xml  number_app.launch.xml  robot_launch.py  setup.launch.xml
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/urdf/: my_robot.urdf
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/action/: MoveRobot.action
src/my_robot_interfaces/srv/: ComputeRectangleArea.srv
