<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_interfaces</name>
  <version>0.0.0</version>
  <description>ros interfaces package</description>
  <maintainer email="kanganyin911@gmail.com">yinkangan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS Interface Dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_cmake</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- ros interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
