cmake_minimum_required(VERSION 3.8)
project(planner_sample_2)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_ros REQUIRED)
find_package(rclcpp REQUIRED)
find_package(pluginlib REQUIRED)
find_package(navigation_planner REQUIRED)

# 注册插件描述文件
pluginlib_export_plugin_description_file(planner_sample_2 plugin.xml)

add_library(planner_sample_2 src/planner_sample_2.cpp)
add_library(planner_sample_2::planner_sample_2 ALIAS planner_sample_2)
target_compile_features(planner_sample_2 PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
target_include_directories(planner_sample_2 PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
ament_target_dependencies(
  planner_sample_2
  "rclcpp"
  "pluginlib"
  "navigation_planner"
)

# Causes the visibility macros to use dllexport rather than dllimport,
# which is appropriate when building the dll but not consuming it.
target_compile_definitions(planner_sample_2 PRIVATE "planner_sample_2_BUILDING_LIBRARY")

install(
  DIRECTORY include/
  DESTINATION include/${PROJECT_NAME}
)
install(
  TARGETS planner_sample_2
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_include_directories(
  "include/${PROJECT_NAME}"
)
ament_export_libraries(
  planner_sample_2
)
ament_export_targets(
  export_${PROJECT_NAME}
)

ament_package()